*biber-9999 (22 May 2013)

  22 May 2013; Manuel Rueger (mrueg) gentoo@rueg.eu +biber-9999.ebuild:
  dev-tex/biber: Add live ebuild, tracking dev branch

  19 May 2013; Manuel Rueger (mrueg) gentoo@rueg.eu biber-1.6.ebuild:
  dev-tex/biber: Fix manifest, add doc useflag

*biber-1.6 (01 May 2013)

  01 May 2013; Manuel Rueger (mrueg) gentoo@rueg.eu +biber-1.6.ebuild,
  -biber-1.5.ebuild:
  dev-tex/biber: Version bump

  20 Jan 2013; Manuel Rueger (mrueg) gentoo@rueg.eu biber-1.5.ebuild:
  dev-tex/biber: Raise biblatex dep

*biber-1.5 (20 Jan 2013)

  20 Jan 2013; Manuel Rueger (mrueg) gentoo@rueg.eu +biber-1.5.ebuild,
  -biber-1.4.ebuild:
  dev-tex/biber: Version bump

  01 Jan 2013; Manuel Rüger <gentoo@rueg.eu> biber-1.4.ebuild:
  dev-tex/biber: Fix dependencies, all tests work now

*biber-1.4 (29 Nov 2012)

  29 Nov 2012;  <mrueg@gentoo.org> +biber-1.4.ebuild, -biber-1.3.ebuild:
  dev-tex/biber: Version bump

  08 Nov 2012; Manuel Rueger <gentoo@rueg.eu
  -files/biber-1.2-drop-Mozilla-CA.patch, biber-1.3.ebuild:
  dev-tex/biber: Fix missing dependencies

*biber-1.3 (02 Nov 2012)

  02 Nov 2012;  <mrueg@gentoo.org> +biber-1.3.ebuild,
  +files/biber-1.2-drop-Mozilla-CA.patch, +metadata.xml:
  dev-tex/biber: Import via bug #340353