@@ -1,5 +1,1 @@
-DIST biber-1.6.tar.gz 2010041 SHA256 e689e08ef03f6a6c8df6756071d6d574a36288f605ed8a47925566f84943822c SHA512 fcbd486f163e1e4d348973ba759526107a7771ad9f471617f264d2c77afd6951cdf9806bdd81533a8064a0bc64cc5b50801ffbca1c96caf017fed479ecd867dd WHIRLPOOL 24a1f922586c635234e3b8bde9a4dce6aae95c582c59bd50cd07cd825235ceb63bddea6cd6495cf22bbc3d81b7871dc7f5a133bcef2190dff86b5ad64a832c00
-EBUILD biber-1.6.ebuild 1379 SHA256 d87e7ab037727a1601dc0c9acb21e88b13f8f0a714b881275141257b7c8fe836 SHA512 ff0f453c7a514577ae0029861ddd4e17ef8086d86b6fc1f5cea730eeb8028f51eba16a9e269064118a65b47d6fcd00410233a6553bc31eb2aa5ef7fa7b25280c WHIRLPOOL f943f7da68e3909d47ce5c6f286e0fb93285b61c27b7edbaaa6eaf2560050b659c3c22ddfbd6a261d44f5178736e62baa3e661a16d9d43361f3986e088a9d15c
-EBUILD biber-9999.ebuild 1326 SHA256 1cbbabd0fb1c54f2c347b27c7580ce24f27c91434c48cee76dba7de0c5d99f49 SHA512 3da7679e092cc7abe12cb6657ce28b2b756e02c071ab56e2f4ef59cca28c7a7b290317ea311daf07d2279033082e9f213a97b1892ee3e279895a25973713869b WHIRLPOOL 46e40efd331e87352b0b97495e9d248ffb56fd99693035d6d1c823017cdd2014c1db672c3a5db59949ff312170e16788b99cdb7648e01c26ed086b94d81d74c4
-MISC ChangeLog 1251 SHA256 6b58fc52a8324e34bbffdf8bbe1be94dccf230f9c4dcccb9dcd28cd1f71c88b7 SHA512 0ef6b429c0e7633ddbdd0bd3f885c7e30e67aa636c32dfaf2a5262e7980e1441460a292685b179a7a87e31505cbf87bbae2c3923a2c2ac4e9c352619bd73eb03 WHIRLPOOL 408832ade9adcbe637cb88fe24bbc3ad4a9e8fd7d028a52de9d23e9ccad5ec43c88d6d9dd6728c20c6421d5376c0dd602ff111ae3ad3463e7b40b7b51bde37c5
-MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
+DIST biber-1.7.tar.gz 2063730 SHA256 baefc64442b6b0f4810712a3d48346b9f08ab6a39af828fca5df97a0430fec1c SHA512 caa77968b2912ea25727ae48f818aa74e289e4f2ff481f85c25e1e4660549ef36c4a2af40bbbbc623dd145038c4e9b07dc2a735384d1ffe54c06cc32199bb7c2 WHIRLPOOL f50439e38dddfd7e3a395640553e7e50fe764b209a15c6ad182c1b39246bad916e41cd51171feee48eede33e4b376ea298a98a644da7c9c38db7113f6ecb9a4f
